@@ -1,4 +1,4 @@
 version=3
-http://xinehq.de/index.php/releases \
+http://www.xine-project.org/releases \
 	(?:.*/)?xine/xine-lib-([\d\.]*).tar.gz \
 	debian uupdate
