@@ -201,7 +201,7 @@
      tools for further info.
      You can also find links to third parties providing xine RPMs on
      the xine homepage at
-     <ulink url="http://xinehq.de/index.php/releases">http://xinehq.de/index.php/releases</ulink>.
+     <ulink url="http://www.xine-project.org/releases">http://www.xine-project.org/releases</ulink>.
     </para>
     <para>
      See the next section of this FAQ for instructions on how to build xine
