@@ -6,7 +6,7 @@
   <para>
    You are currently looking at a piece of documentation for xine. 
    xine is a free video player. It lives on
-   <ulink url="http://xinehq.de/">http://xinehq.de/</ulink>. Specifically
+   <ulink url="http://www.xine-project.org/">http://www.xine-project.org/</ulink>. Specifically
    this document goes under the moniker of the "xine Hackers' Guide".
   </para>
  </sect1>
@@ -36,7 +36,7 @@
   </para>
   <para>
    New versions of this document can also be obtained from the xine web site:
-   <ulink url="http://xinehq.de/">http://xinehq.de/</ulink>.
+   <ulink url="http://www.xine-project.org/">http://www.xine-project.org/</ulink>.
   </para>
  </sect1>
 
