@@ -347,8 +347,8 @@ stream.
 
 .br
 The programs are documented fully on the xine home page:
-.UR http://xinehq.de/
-.IR "http://xinehq.de/"
+.UR http://www.xine-project.org/
+.IR "http://www.xine-project.org/"
 .UE
 .SH AUTHOR
 This text was extracted from the xine man page by Darren Salt
