@@ -71,6 +71,9 @@ xine-lib (1.1.90) (Unreleased)
 xine-lib (1.1.17) 2009-??-??
   * Enable libmpeg2new. This is not yet production code; the old mpeg2
     decoder remains the default.
+  * Fix a build failure on *BSD due to some rather useful GNUisms.
+  * Protect audio loop so it cannot write to a paused device (fix
+    pause/resume freeze with pulseaudio).
 
 xine-lib (1.1.16.2) 2009-02-10
   * Build fixes related to ImageMagick 6.4 & later.
